laravel/resources/assets/less/app.less
/* ... */
#members-recency {
    .stat,
    .change {
        color: @gold;
        .up,
        .down {
            opacity: 1;
        }
        path {
            fill: @gold;
        }
    }
    .label:after {
        color: @mediumgrey;
        content: 'Time since last visit (days)';
        display: block;
        font-size: 70%;
        padding-top: 3px;
        text-transform: initial;
    }
}
#members-total {
    .stat,
    .change {
        color: @cobalt;
        .up,
        .down {
            opacity: 1;
        }
        path {
            fill: @cobalt;
        }
    }
    .label:after {
        color: @mediumgrey;
        content: 'Total #';
        display: block;
        font-size: 70%;
        padding-top: 3px;
        text-transform: initial;
    }
    .stat:after {
        content: 'k';
        font-size: 50%;
    }
    .change:after {
        content: 'k';
    }
}
#members-percap {
    .stat,
    .change {
        color: @darkgrey;
        .up,
        .down {
            opacity: 1;
        }
        path {
            fill: @darkgrey;
        }
    }
}
/***********************/
/******** FORMS ********/
/***********************/
.form-control {
    background-color: @lightgrey;
    border: 0;
    padding: 10px;
}
.save-goals {
    text-align: right;
}
.button-expand {
    background-color: @aqua;
    border-radius: 20px;
    cursor: pointer;
    height: 25px;
    padding: 5px 0 0 5px;
    position: absolute;
    right: -25px;
    top: 4px;
    width: 25px;
    svg {
        width: 15px;
    }
    path {
        fill: @white;
    }
}
.button-expand.collapsed {
    padding: 5px 0 0 6px;
    svg {
        transform: rotate(270deg);
    }
}
.collapse-title {
    padding-top: 10px;
}
/************************/
/******** FOOTER ********/
/************************/
footer {
    text-align: right;
}




















/* WHAT ARE THESE FOR?  I DON'T RECALL  ... quick search says they're not currently used in the site.  Hanging onto them until I can remember why I created these. */
.arrow-line {
    stroke-width: 8;
    stroke-linecap: round;
    stroke-miterlimit: 10;
}
#arrow-1, #arrow-2 {
    float: left;
    transform: scale(.4);
        -ms-transform: scale(.4);
        -webkit-transform: scale(.4);
}
/* Breakpoints are ... 1199/1200, 991/992, 767/768
XS = Extra small devices Phones (<768px)
SM = Small devices Tablets (≥768px)
MD = Medium devices Desktops (≥992px)
LG = Large devices Desktops (≥1200px)
*/


/******** TEMPORARY ********/
.radial-svg .labels {
    display: none;
}







/***********************************************************************************/
/***********************************************************************************/
/***********************************************************************************/
/* TEST DIALS */
.background {
    fill: #FFFFFF;
    fill-opacity: 0.01;
}

.component {
    fill: #e1e1e1;
}

.component .label {
    font-family: Myriad, "Helvetic Neue", Helvetica, Arial;
    text-anchor: middle;
    fill: #0000FF;
}

.arc {
    stroke-weight:0.1;
    fill: #4e8fff;
}


.arc2 {
    stroke-weight:0.1;
    fill: #3660b0;
}


.label {
    font-family:  Myriad, "Helvetic Neue", Helvetica, Arial;
    text-anchor: middle;
}

.radial-svg {
    display: block;
    margin: 0 auto;
}

#test .arc2 {
    stroke-weight:0.1;
    fill: #3660b0;
}

#div1, #div2, #div3, #div4, #div5, #div6, #div7 {
    box-sizing: border-box;
    float: left;
    height: 115px;
    width: 115px;
}

#div1 {
    .arc {
        stroke-weight: 0.1;
        fill: @cobalt;
    }
    line {
        stroke: @cobalt;
    }
}

#div2 {
    .arc {
        stroke-weight: 0.1;
        fill: @teal;
    }
    line {
        stroke: @teal;
    }
}

#div3 {
    .arc {
        stroke-weight: 0.1;
        fill: @aqua;
    }
    line {
        stroke: @aqua;
    }
}

#div4 {
    .arc {
        stroke-weight: 0.1;
        fill: @gold;
    }
    line {
        stroke: @gold;
    }
}

#div5 {
    .arc {
        stroke-weight: 0.1;
        fill: @mediumpurple;
    }
    line {
        stroke: @mediumpurple;
    }
}

#div6 {
    .arc {
        stroke-weight: 0.1;
        fill: @lightpurple;
    }
    line {
        stroke: @lightpurple;
    }
}

#div7 {
    .arc {
        stroke-weight: 0.1;
        fill: @darkpurple2;
    }
    line {
        stroke: @darkpurple2;
    }
}


.selectedRadial {
    border-radius: 3px;
    background: #f4f4f4;
    color: #000;
    box-shadow: 0 1px 5px rgba(0,0,0,0.4);
    -moz-box-shadow: 0 1px 5px rgba(0,0,0,0.4);
    border: 1px solid rgba(200,200,200,0.85);
}

.radial {
    border-radius: 3px;
    background: #FFFFFF;
    color: #000;

}




/* TEST BULLETS ??? */
.bullet { font: 10px sans-serif; }
.bullet .marker { stroke: #000; stroke-width: 2px; }
.bullet .tick line { stroke: #666; stroke-width: .5px; }
.bullet .range.s0 { fill: #eee; }
.bullet .range.s1 { fill: #ddd; }
.bullet .range.s2 { fill: #ccc; }
.bullet .measure.s0 { fill: lightsteelblue; }
.bullet .measure.s1 { fill: steelblue; }
.bullet .title { font-size: 14px; font-weight: bold; }
.bullet .subtitle { fill: #999; }






/* TEST DATEPICKER */
a.dp-choose-date {
    float: left;
    width: 16px;
    height: 16px;
    padding: 0;
    margin: 3px 4px 0;
    display: block;
    text-indent: -2000px;
    overflow: hidden;
    background: url('/img/icon_calendar.svg') no-repeat;
    background-size: cover;
}
a.dp-choose-date.dp-disabled {
    background-position: 0 -20px;
    cursor: default;
}
/* makes the input field shorter once the date picker code
 * has run (to allow space for the calendar icon
 */
input.dp-applied {
    width: 140px;
    float: left;
}
/** BASE **/


table.jCalendar {
    border: 1px solid #000;
    background: #aaa;
    border-collapse: separate;
    border-spacing: 2px;
}
table.jCalendar th {
    background: #333;
    color: #fff;
    font-weight: bold;
    padding: 3px 5px;
}
/* ... */

